# moveit_pro_ur_ws

./: .gitmodules  README.md
src/picknik_007_rail_hw/: CMakeLists.txt  README.md  package.xml
src/picknik_007_rail_hw/behaviors/src/: register_behaviors.cpp
src/picknik_007_rail_hw/behaviors/test/: test_behavior_plugins.cpp
src/picknik_007_rail_hw/config/: config.yaml
src/picknik_007_rail_hw/config/moveit/: joint_limits.yaml
src/picknik_007_rail_hw/launch/: agent_bridge.launch.xml  cameras.launch.xml  robot_drivers_to_persist.launch.py
src/picknik_007_rail_mock/: CMakeLists.txt  README.md  package.xml
src/picknik_007_rail_mock/behaviors/: CMakeLists.txt  trigger_pstop_reset_service_plugin_description.xml
src/picknik_007_rail_mock/behaviors/include/trigger_pstop_reset_service/: trigger_pstop_reset_service.hpp
src/picknik_007_rail_mock/behaviors/src/: register_behaviors.cpp  trigger_pstop_reset_service.cpp
src/picknik_007_rail_mock/config/: config.yaml
src/picknik_007_rail_mock/config/control/: picknik_007_rail.ros2_control.yaml
src/picknik_007_rail_mock/config/moveit/: hard_joint_limits.yaml  joint_jog.yaml  joint_limits.yaml  picknik_007_rail.srdf  pose_ik_distance.yaml  pose_jog.yaml
src/picknik_007_rail_mock/description/: picknik_007_rail.xacro
src/picknik_007_rail_mock/objectives/: close_gripper.xml  open_gripper.xml
src/vention_description/: CMakeLists.txt  package.xml
src/vention_description/config/: linear_actuator_controller.yaml
src/vention_description/launch/: view_urdf.launch.py
src/vention_description/meshes/collision/: 6333N39_45deg_Robot_Base.stl
src/vention_description/meshes/visual/: 6333N34_Robot_Base.dae  6333N39_45deg_Robot_Base.dae  MO-LM-039-2295_carriage.dae  MO-LM-039-2295_frame.dae  MO-LM-039-2295_motor.dae  MO-LM-039-2295_right_angle_motor.dae  nasa_carriage_adapter.dae  nasa_frame.dae
src/vention_description/rviz/: view_urdf.rviz
src/vention_description/urdf/: linear_actuator.urdf.xacro  vention_mo_lm_039_2295.ros2_control.xacro  vention_mo_lm_039_2295_macro.xacro
