<?xml version="1.0" ?>
<package format="3">
  <name>ur_hw</name>
  <version>8.6.0</version>

  <description>
    MoveIt Pro configuration package for a hardware UR arm.
  </description>

  <maintainer email="support@picknik.ai">MoveIt Pro Maintainer</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>moveit_studio_common</build_depend>

  <depend>moveit_pro_behavior_interface</depend>
  <depend>moveit_studio_ur_pstop_manager</depend>
  <depend>ur_mock</depend>
  <depend>realsense2_camera</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
