<?xml version="1.0" ?>
<package format="3">
  <name>picknik_007_rail_hw</name>
  <version>8.6.0</version>

  <description>
    MoveIt Pro hardware configuration for picknik_007: UR5e arm on a Vention
    MachineMotion 2 linear rail, with a Robotiq 2f-85 gripper and a wrist-
    mounted Realsense D415. Inherits from picknik_007_rail_mock and overrides
    the hardware-specific bits (real driver IPs, real camera serial).
  </description>

  <maintainer email="support@picknik.ai">MoveIt Pro Maintainer</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>moveit_studio_common</build_depend>

  <depend>moveit_pro_behavior_interface</depend>
  <depend>moveit_studio_ur_pstop_manager</depend>
  <depend>picknik_007_rail_mock</depend>
  <depend>realsense2_camera</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
