<?xml version="1.0" ?>
<package format="3">
  <name>picknik_007_rail_mock</name>
  <version>8.6.0</version>

  <description>
    MoveIt Pro configuration package for a mock hardware UR arm.
  </description>

  <maintainer email="support@picknik.ai">MoveIt Pro Maintainer</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>moveit_studio_common</build_depend>

  <depend>moveit_pro_behavior_interface</depend>
  <depend>picknik_accessories</depend>
  <depend>robotiq_description</depend>
  <depend>ur_description</depend>
  <depend>ur_robot_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
