<?xml version="1.0" ?>
<package format="3">
  <name>picknik_007_rail_mock</name>
  <version>8.6.0</version>

  <description>
    MoveIt Pro mock-hardware configuration for picknik_007: UR5e arm on a
    Vention MachineMotion 2 linear rail, with a Robotiq 2f-85 gripper and a
    wrist-mounted Realsense D415. Parent config — the hw variant inherits
    from this and overrides for real hardware.
  </description>

  <maintainer email="support@picknik.ai">MoveIt Pro Maintainer</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>moveit_studio_common</build_depend>

  <depend>moveit_pro_behavior_interface</depend>
  <depend>picknik_accessories</depend>
  <depend>robotiq_description</depend>
  <depend>ur_description</depend>
  <depend>ur_robot_driver</depend>
  <depend>vention_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
